--- a/src/common/DesignerItemThumb.module.css
+++ b/src/common/DesignerItemThumb.module.css
@@ -1,19 +1,9 @@
 #card{
     overflow: hidden;
-    -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
+    /* -webkit-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
     -moz-box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
     box-shadow: 0px 0px 6px 0px rgba(0,0,0,0.75);
-    border-radius: 4px;
+    border-radius: 4px;*/
     display: flex;
     flex-direction: column;
-}
-#profileHeader{
-    display: flex;
-    align-items: center;
-}
-#designerProfileImage{
-    height: 50px;
-    width: 50px;
-    border-radius: 50%;
-    margin: 5px;
 }
