--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -3,6 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
+    
 }
 .feedEntryContainer{
     margin: 15px;
@@ -12,4 +13,22 @@
 }
 .feedTextContainer{
     
+}
+
+.designerProfileImage{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin: 5px;
+}
+.profileHeader{
+    display: flex;
+    align-items: center;
+    border-bottom: 1px solid lightgray;
+}
+.feedPostHeaderContainer{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    border: 1px solid lightgray;
 }
