--- a/src/common/DesignerItemThumb.module.css
+++ b/src/common/DesignerItemThumb.module.css
@@ -7,3 +7,13 @@
     display: flex;
     flex-direction: column;
 }
+#profileHeader{
+    display: flex;
+    align-items: center;
+}
+#designerProfileImage{
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
+    margin: 5px;
+}
