--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -4,6 +4,12 @@
     flex-direction: column;
     margin: auto;
 }
-#feedItemContainer{
+.feedEntryContainer{
     margin: 15px;
+}
+.feedItemContainer{
+    
+}
+.feedTextContainer{
+    
 }
