--- a/src/pages/Item/Item.module.css
+++ b/src/pages/Item/Item.module.css
@@ -1,32 +1,26 @@
-body{
-    margin: 0px;
-    background-color: #eee;
-    overflow-y: scroll;
-    font-family: 'Garamond';
 
-}
 #container{
-    width: 100%;
+    margin: 3vw 10vw;
     font-family: 'Garamond';
 }
-#images-container{
+#imagesContainer{
     display: flex;
     justify-content: space-between;
     font-family: 'Garamond';
     color: #444444
 }
-#right-side-container{
+#rightSideContainer{
     flex-grow: 3;
     margin: 0 15px;
 }
-#image-sidebar-container{
+#imageSidebarContainer{
     flex-basis: 40%;
     margin: 0 15px;
 }
-#large-image-container{
+#largeImageContainer{
     display: inline-block;
 }
-#source-material-container{
+#sourceMaterialContainer{
     margin-top: 1.3em;
 }
 img{
@@ -38,7 +32,7 @@ img{
     width: 1px;
     background-color: lightgray;
 }
-.horizontal-divider{
+.horizontalDivider{
     margin-top: 10px;
     width: 100%;
     height: 1px;
