--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -3,7 +3,7 @@
     display: flex;
     flex-direction: column;
     margin: auto;
-    
+    margin-bottom: 10vh;
 }
 .feedEntryContainer{
     margin: 15px;
@@ -30,5 +30,4 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    border: 1px solid lightgray;
 }
