--- a/src/common/DesignerItemThumb.module.css
+++ b/src/common/DesignerItemThumb.module.css
@@ -6,6 +6,7 @@
     border-radius: 4px;*/
     display: flex;
     flex-direction: column;
+    padding: 12px;
 }
 .thumbImage{
     max-height: 25vw;
