--- a/src/pages/Feed/Feed.module.css
+++ b/src/pages/Feed/Feed.module.css
@@ -4,6 +4,7 @@
     flex-direction: column;
     margin: auto;
     margin-bottom: 10vh;
+    margin-top: 10px;
 }
 .feedEntryContainer{
     margin: 15px;
